<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgJenisKamar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/pph_featured_1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/rvijk_cd_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tvNama"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/rvijk_room_type"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/orange_400"
                        android:layout_marginEnd="4dp"
                        app:srcCompat="@drawable/ic_star_border_24"
                        android:contentDescription="@string/rvijk_cd_icon" />

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/rvijk_rating" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineHeight="20sp"
                android:text="@string/rvijk_description"
                android:textColor="@color/muted_foreground" />
            
            <Button
                android:id="@+id/btnSelengkapnya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rvijk_selengkapnya"
                style="@style/GAH.Buttons.Link.Dense" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/black"
                        android:layout_marginEnd="4dp"
                        app:srcCompat="@drawable/ic_grid_3x3_24"
                        android:contentDescription="@string/rvijk_cd_icon"/>

                    <TextView
                        android:id="@+id/tvUkuranKamar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/rvijk_ukuran" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/black"
                        android:layout_marginEnd="4dp"
                        app:srcCompat="@drawable/ic_people_alt_24"
                        android:contentDescription="@string/rvijk_cd_icon"/>

                    <TextView
                        android:id="@+id/tvKapasitas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/rvijk_kapasitas" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>