<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgJenisKamar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/pph_featured_1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/rvijk_cd_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tvNama"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/rvijk_room_type"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/orange_400"
                        android:layout_marginEnd="4dp"
                        app:srcCompat="@drawable/ic_star_border_24"
                        android:contentDescription="@string/rvijk_cd_icon" />

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/rvijk_rating" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/black"
                        android:layout_marginEnd="4dp"
                        app:srcCompat="@drawable/ic_people_alt_24"
                        android:contentDescription="@string/rvijk_cd_icon"/>

                    <TextView
                        android:id="@+id/tvKapasitas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/rvijk_kapasitas"
                        android:layout_marginEnd="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|start"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/black"
                        android:layout_marginEnd="4dp"
                        app:srcCompat="@drawable/ic_grid_3x3_24"
                        android:contentDescription="@string/rvijk_cd_icon"/>

                    <TextView
                        android:id="@+id/tvUkuranKamar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/rvijk_ukuran" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/black"
                        android:layout_marginEnd="4dp"
                        app:srcCompat="@drawable/ic_bed_24"
                        android:contentDescription="@string/rvijk_cd_icon"/>

                    <TextView
                        android:id="@+id/tvBedType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/loading"
                        android:layout_marginEnd="8dp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvFasilitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tvNormalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/format_currency"
                    android:textAlignment="center"
                    android:textColor="@color/gray_400" />

                <TextView
                    android:id="@+id/tvDiscountPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/format_currency"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/green_500" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="/malam/kamar"
                    android:textAlignment="center"
                    android:textColor="@color/muted_foreground" />

                <TextView
                    android:id="@+id/tvCatatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="8dp"
                            android:paddingHorizontal="12dp"
                            android:text="Jumlah kamar:"
                            android:background="@color/secondary"/>

                        <Button
                            android:id="@+id/btnSubtractKamar"
                            style="@style/GAH.Buttons.Link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="8dp"
                            android:text="–"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvJumlahKamar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="8dp"
                            android:text="0" />

                        <Button
                            android:id="@+id/btnAddKamar"
                            style="@style/GAH.Buttons.Link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="8dp"
                            android:text="+"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>